--- a/orangepi_3_defconfig
+++ b/orangepi_3_defconfig
@@ -6,6 +6,7 @@ BR2_ARM_FPU_VFPV4=y
 BR2_KERNEL_HEADERS_CUSTOM_GIT=y
 BR2_KERNEL_HEADERS_CUSTOM_REPO_URL="https://github.com/megous/linux"
 BR2_KERNEL_HEADERS_CUSTOM_REPO_VERSION="opi3-5.11"
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_11=y
 
 # Firmware
 BR2_TARGET_ARM_TRUSTED_FIRMWARE=y
