--- a/orangepi_3_defconfig
+++ b/orangepi_3_defconfig
@@ -43,7 +43,7 @@ BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_TARGET_GENERIC_ISSUE="Welcome to Orangepi 3"
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-BR2_TARGET_ROOTFS_EXT2_SIZE=80M
+BR2_TARGET_ROOTFS_EXT2_SIZE="80M"
 BR2_TARGET_GENERIC_ROOT_PASSWD="12345"
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
@@ -56,6 +56,7 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV=y
 BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="-c board/orangepi/orangepi-3/genimage.cfg"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/orangepi/orangepi-3/post-build.sh"
+BR2_ROOTFS_USERS_TABLES="board/orangepi/orangepi-3/default_user_tbl"
 BR2_ROOTFS_OVERLAY="board/orangepi/orangepi-3/rootfs_overlay"
 
 # wireless firmware
