--- a/orangepi-3/extlinux.conf
+++ b/orangepi-3/extlinux.conf
@@ -1,4 +1,4 @@
 label linux
   kernel /Image
   devicetree /sun50i-h6-orangepi-3.dtb
-  append console=ttyS0,115200 earlyprintk root=/dev/mmcblk2p2 rootwait
+  append console=ttyS0,115200 console=tty0 earlyprintk root=/dev/mmcblk2p2 rootwait
