--- a/orangepi_3_defconfig
+++ b/orangepi_3_defconfig
@@ -1,6 +1,7 @@
 BR2_aarch64=y
 BR2_cortex_a53=y
 BR2_ARM_FPU_VFPV4=y
+BR2_CCACHE=y
 
 # Linux headers same as kernel, a 5.11 series
 BR2_KERNEL_HEADERS_CUSTOM_GIT=y
