Enable staging allwinner video drivers for test with CLI linux version

--- a/linux.config
+++ b/linux.config
@@ -558,7 +558,7 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=y
 CONFIG_CPUFREQ_DT_PLATDEV=y
 CONFIG_ACPI_CPPC_CPUFREQ=m
-CONFIG_ARM_ALLWINNER_SUN50I_CPUFREQ_NVMEM=y
+CONFIG_ARM_ALLWINNER_SUN50I_CPUFREQ_NVMEM=m
 CONFIG_ARM_ARMADA_37XX_CPUFREQ=y
 # CONFIG_ARM_ARMADA_8K_CPUFREQ is not set
 CONFIG_ARM_SCPI_CPUFREQ=y
@@ -4392,6 +4392,11 @@ CONFIG_V4L2_FWNODE=m
 # Media controller options
 #
 # CONFIG_MEDIA_CONTROLLER_DVB is not set
+CONFIG_MEDIA_CONTROLLER_REQUEST_API=y
+
+#
+# Please notice that the enabled Media controller Request API is EXPERIMENTAL
+#
 # end of Media controller options
 
 #
@@ -5384,10 +5389,9 @@ CONFIG_SND_SOC_RCAR=m
 # CONFIG_SND_SUN4I_CODEC is not set
 # CONFIG_SND_SUN8I_CODEC is not set
 # CONFIG_SND_SUN8I_CODEC_ANALOG is not set
-CONFIG_SND_SUN50I_CODEC_ANALOG=y
+# CONFIG_SND_SUN50I_CODEC_ANALOG is not set
 CONFIG_SND_SUN4I_I2S=m
 CONFIG_SND_SUN4I_SPDIF=m
-CONFIG_SND_SUN8I_ADDA_PR_REGMAP=y
 # end of Allwinner SoC Audio support
 
 CONFIG_SND_SOC_TEGRA=m
@@ -6625,7 +6629,7 @@ CONFIG_STAGING_MEDIA=y
 # CONFIG_VIDEO_MESON_VDEC is not set
 # CONFIG_VIDEO_ROCKCHIP_VDEC is not set
 CONFIG_VIDEO_SUNXI=y
-# CONFIG_VIDEO_SUNXI_CEDRUS is not set
+CONFIG_VIDEO_SUNXI_CEDRUS=m
 # CONFIG_TEGRA_VDE is not set
 # CONFIG_VIDEO_ZORAN is not set
 # CONFIG_VIDEO_TEGRA is not set
@@ -7035,7 +7039,7 @@ CONFIG_IOMMU_IO_PGTABLE_LPAE=y
 CONFIG_OF_IOMMU=y
 CONFIG_IOMMU_DMA=y
 CONFIG_ROCKCHIP_IOMMU=y
-CONFIG_SUN50I_IOMMU=y
+# CONFIG_SUN50I_IOMMU is not set
 CONFIG_TEGRA_IOMMU_SMMU=y
 # CONFIG_EXYNOS_IOMMU is not set
 # CONFIG_IPMMU_VMSA is not set
