--- a/linux.config
+++ b/linux.config
@@ -4392,11 +4392,6 @@ CONFIG_V4L2_FWNODE=m
 # Media controller options
 #
 # CONFIG_MEDIA_CONTROLLER_DVB is not set
-CONFIG_MEDIA_CONTROLLER_REQUEST_API=y
-
-#
-# Please notice that the enabled Media controller Request API is EXPERIMENTAL
-#
 # end of Media controller options
 
 #
@@ -4863,7 +4858,6 @@ CONFIG_DRM_MSM_DSI_10NM_PHY=y
 CONFIG_DRM_MSM_DSI_7NM_PHY=y
 CONFIG_DRM_TEGRA=m
 # CONFIG_DRM_TEGRA_DEBUG is not set
-# CONFIG_DRM_TEGRA_STAGING is not set
 CONFIG_DRM_PANEL=y
 
 #
@@ -6551,121 +6545,7 @@ CONFIG_XEN_AUTO_XLATE=y
 # end of Xen driver support
 
 # CONFIG_GREYBUS is not set
-CONFIG_STAGING=y
-# CONFIG_PRISM2_USB is not set
-# CONFIG_COMEDI is not set
-# CONFIG_RTL8192U is not set
-# CONFIG_RTLLIB is not set
-# CONFIG_RTL8723BS is not set
-# CONFIG_R8712U is not set
-# CONFIG_R8188EU is not set
-# CONFIG_RTS5208 is not set
-# CONFIG_VT6655 is not set
-# CONFIG_VT6656 is not set
-
-#
-# IIO staging drivers
-#
-
-#
-# Accelerometers
-#
-# CONFIG_ADIS16203 is not set
-# CONFIG_ADIS16240 is not set
-# end of Accelerometers
-
-#
-# Analog to digital converters
-#
-# CONFIG_AD7816 is not set
-# CONFIG_AD7280 is not set
-# end of Analog to digital converters
-
-#
-# Analog digital bi-direction converters
-#
-# CONFIG_ADT7316 is not set
-# end of Analog digital bi-direction converters
-
-#
-# Capacitance to digital converters
-#
-# CONFIG_AD7150 is not set
-# CONFIG_AD7746 is not set
-# end of Capacitance to digital converters
-
-#
-# Direct Digital Synthesis
-#
-# CONFIG_AD9832 is not set
-# CONFIG_AD9834 is not set
-# end of Direct Digital Synthesis
-
-#
-# Network Analyzer, Impedance Converters
-#
-# CONFIG_AD5933 is not set
-# end of Network Analyzer, Impedance Converters
-
-#
-# Active energy metering IC
-#
-# CONFIG_ADE7854 is not set
-# end of Active energy metering IC
-
-#
-# Resolver to digital converters
-#
-# CONFIG_AD2S1210 is not set
-# end of Resolver to digital converters
-# end of IIO staging drivers
-
-# CONFIG_FB_SM750 is not set
-# CONFIG_USB_EMXX is not set
-# CONFIG_MFD_NVEC is not set
-CONFIG_STAGING_MEDIA=y
-# CONFIG_VIDEO_ALLEGRO_DVT is not set
-# CONFIG_VIDEO_HANTRO is not set
-# CONFIG_VIDEO_MESON_VDEC is not set
-# CONFIG_VIDEO_ROCKCHIP_VDEC is not set
-CONFIG_VIDEO_SUNXI=y
-CONFIG_VIDEO_SUNXI_CEDRUS=m
-# CONFIG_TEGRA_VDE is not set
-# CONFIG_VIDEO_ZORAN is not set
-# CONFIG_VIDEO_TEGRA is not set
-
-#
-# Android
-#
-# end of Android
-
-# CONFIG_STAGING_BOARD is not set
-# CONFIG_LTE_GDM724X is not set
-# CONFIG_GS_FPGABOOT is not set
-# CONFIG_UNISYSSPAR is not set
-# CONFIG_FB_TFT is not set
-# CONFIG_FSL_DPAA2 is not set
-# CONFIG_KS7010 is not set
-CONFIG_BCM_VIDEOCORE=y
-# CONFIG_BCM2835_VCHIQ is not set
-# CONFIG_SND_BCM2835 is not set
-# CONFIG_VIDEO_BCM2835 is not set
-# CONFIG_PI433 is not set
-
-#
-# Gasket devices
-#
-# CONFIG_STAGING_GASKET_FRAMEWORK is not set
-# end of Gasket devices
-
-# CONFIG_XIL_AXIS_FIFO is not set
-# CONFIG_FIELDBUS_DEV is not set
-# CONFIG_QLGE is not set
-# CONFIG_WIMAX is not set
-# CONFIG_WFX is not set
-# CONFIG_PHY_HI3670_USB is not set
-# CONFIG_SPMI_HISI3670 is not set
-# CONFIG_MFD_HI6421_SPMI is not set
+# CONFIG_STAGING is not set
 # CONFIG_GOLDFISH is not set
 CONFIG_CHROME_PLATFORMS=y
 # CONFIG_CHROMEOS_TBMC is not set
@@ -7874,7 +7754,7 @@ CONFIG_PHY_XGENE=y
 CONFIG_PHY_SUN4I_USB=y
 CONFIG_PHY_SUN6I_MIPI_DPHY=m
 # CONFIG_PHY_SUN9I_USB is not set
-CONFIG_PHY_SUN50I_USB3=y
+CONFIG_PHY_SUN50I_USB3=m
 CONFIG_PHY_MESON8B_USB2=y
 CONFIG_PHY_MESON_GXL_USB2=y
 CONFIG_PHY_MESON_G12A_USB2=y
