--- a/orangepi_3_defconfig
+++ b/orangepi_3_defconfig
@@ -495,8 +495,9 @@ BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="opi3-5.11"
 BR2_LINUX_KERNEL_VERSION="opi3-5.11"
 BR2_LINUX_KERNEL_PATCH=""
 # BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
-BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG=y
-# BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
+# BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
+BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/orangepi/orangepi-3/kernel.conf"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES=""
 BR2_LINUX_KERNEL_CUSTOM_LOGO_PATH=""
 BR2_LINUX_KERNEL_IMAGE=y
