--- a/orangepi_3_defconfig
+++ b/orangepi_3_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2021.02-978-gb2e82f9fa5 Configuration
+# Buildroot 2021.02-978-gb2e82f9fa5-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -761,7 +761,7 @@ BR2_PACKAGE_PROVIDES_HOST_GETTEXT="host-gettext-tiny"
 # BR2_PACKAGE_JO is not set
 # BR2_PACKAGE_JQ is not set
 # BR2_PACKAGE_LIBTOOL is not set
-# BR2_PACKAGE_MAKE is not set
+BR2_PACKAGE_MAKE=y
 # BR2_PACKAGE_MAWK is not set
 # BR2_PACKAGE_PKGCONF is not set
 # BR2_PACKAGE_SUBVERSION is not set
@@ -944,7 +944,26 @@ BR2_PACKAGE_NETSURF_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_PSPLASH is not set
 # BR2_PACKAGE_SDL is not set
-# BR2_PACKAGE_SDL2 is not set
+BR2_PACKAGE_SDL2=y
+
+#
+# DirectFB video driver needs directfb
+#
+# BR2_PACKAGE_SDL2_X11 is not set
+# BR2_PACKAGE_SDL2_KMSDRM is not set
+
+#
+# OpenGL support needs X11 and an OpenGL provider
+#
+
+#
+# OpenGL ES support needs an OpenGL ES provider
+#
+# BR2_PACKAGE_SDL2_GFX is not set
+BR2_PACKAGE_SDL2_IMAGE=y
+BR2_PACKAGE_SDL2_MIXER=y
+# BR2_PACKAGE_SDL2_NET is not set
+BR2_PACKAGE_SDL2_TTF=y
 # BR2_PACKAGE_TK is not set
 
 #
@@ -1262,6 +1281,7 @@ BR2_PACKAGE_XTERM=y
 #
 # yad needs libgtk2 or libgtk3 w/ X11 backend
 #
+BR2_PACKAGE_SDL_GAME=y
 
 #
 # X libraries and helper libraries
@@ -3221,9 +3241,9 @@ BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://source.denx.de/u-boot/u-boot"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="v2021.04"
 BR2_TARGET_UBOOT_VERSION="v2021.04"
 BR2_TARGET_UBOOT_PATCH=""
-BR2_TARGET_UBOOT_USE_DEFCONFIG=y
-# BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG is not set
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="orangepi_3"
+# BR2_TARGET_UBOOT_USE_DEFCONFIG is not set
+BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG=y
+BR2_TARGET_UBOOT_CUSTOM_CONFIG_FILE="board/orangepi/orangepi-3/uboot.conf"
 BR2_TARGET_UBOOT_CONFIG_FRAGMENT_FILES=""
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 BR2_TARGET_UBOOT_NEEDS_PYTHON=y
