Fix SDL2 dependency errors

--- a/orangepi_3_defconfig
+++ b/orangepi_3_defconfig
@@ -926,7 +926,27 @@ BR2_PACKAGE_NETSURF_ARCH_SUPPORTS=y
 # Graphic libraries
 #
 # BR2_PACKAGE_CEGUI is not set
-# BR2_PACKAGE_DIRECTFB is not set
+BR2_PACKAGE_DIRECTFB=y
+# BR2_PACKAGE_DIRECTFB_MULTI is not set
+BR2_PACKAGE_DIRECTFB_DEBUG_SUPPORT=y
+# BR2_PACKAGE_DIRECTFB_DEBUG is not set
+# BR2_PACKAGE_DIRECTFB_TRACE is not set
+# BR2_PACKAGE_DIRECTFB_DIVINE is not set
+# BR2_PACKAGE_DIRECTFB_SAWMAN is not set
+BR2_PACKAGE_DIRECTFB_LINUXINPUT=y
+BR2_PACKAGE_DIRECTFB_KEYBOARD=y
+BR2_PACKAGE_DIRECTFB_PS2MOUSE=y
+BR2_PACKAGE_DIRECTFB_SERIALMOUSE=y
+# BR2_PACKAGE_DIRECTFB_TSLIB is not set
+BR2_PACKAGE_DIRECTFB_GIF=y
+# BR2_PACKAGE_DIRECTFB_TIFF is not set
+# BR2_PACKAGE_DIRECTFB_IMLIB2 is not set
+BR2_PACKAGE_DIRECTFB_JPEG=y
+BR2_PACKAGE_DIRECTFB_PNG=y
+BR2_PACKAGE_DIRECTFB_SVG=y
+# BR2_PACKAGE_DIRECTFB_DITHER_RGB16 is not set
+# BR2_PACKAGE_DIRECTFB_TESTS is not set
+# BR2_PACKAGE_DIRECTFB_EXAMPLES is not set
 # BR2_PACKAGE_FB_TEST_APP is not set
 # BR2_PACKAGE_FBDUMP is not set
 # BR2_PACKAGE_FBGRAB is not set
@@ -936,6 +956,7 @@ BR2_PACKAGE_NETSURF_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GRAPHICSMAGICK is not set
 # BR2_PACKAGE_IMAGEMAGICK is not set
 # BR2_PACKAGE_LINUX_FUSION is not set
+# BR2_PACKAGE_LITE is not set
 # BR2_PACKAGE_MESA3D is not set
 # BR2_PACKAGE_OCRAD is not set
 
@@ -945,12 +966,9 @@ BR2_PACKAGE_NETSURF_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PSPLASH is not set
 # BR2_PACKAGE_SDL is not set
 BR2_PACKAGE_SDL2=y
-
-#
-# DirectFB video driver needs directfb
-#
-# BR2_PACKAGE_SDL2_X11 is not set
-# BR2_PACKAGE_SDL2_KMSDRM is not set
+BR2_PACKAGE_SDL2_DIRECTFB=y
+BR2_PACKAGE_SDL2_X11=y
+BR2_PACKAGE_SDL2_KMSDRM=y
 
 #
 # OpenGL support needs X11 and an OpenGL provider
@@ -1822,7 +1840,7 @@ BR2_PACKAGE_MONGODB_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBNFS is not set
 # BR2_PACKAGE_LIBSYSFS is not set
 # BR2_PACKAGE_LOCKDEV is not set
-# BR2_PACKAGE_PHYSFS is not set
+BR2_PACKAGE_PHYSFS=y
 
 #
 # Graphics
@@ -1835,10 +1853,10 @@ BR2_PACKAGE_MONGODB_ARCH_SUPPORTS=y
 # BR2_PACKAGE_BULLET is not set
 BR2_PACKAGE_CAIRO=y
 # BR2_PACKAGE_CAIRO_PS is not set
-# BR2_PACKAGE_CAIRO_PDF is not set
-# BR2_PACKAGE_CAIRO_PNG is not set
+BR2_PACKAGE_CAIRO_PDF=y
+BR2_PACKAGE_CAIRO_PNG=y
 # BR2_PACKAGE_CAIRO_SCRIPT is not set
-# BR2_PACKAGE_CAIRO_SVG is not set
+BR2_PACKAGE_CAIRO_SVG=y
 # BR2_PACKAGE_CAIRO_TEE is not set
 # BR2_PACKAGE_CAIRO_XML is not set
 # BR2_PACKAGE_CAIROMM is not set
@@ -1874,7 +1892,12 @@ BR2_PACKAGE_HARFBUZZ=y
 # BR2_PACKAGE_JASPER is not set
 # BR2_PACKAGE_JBIG2DEC is not set
 BR2_PACKAGE_JPEG_SIMD_SUPPORT=y
-# BR2_PACKAGE_JPEG is not set
+BR2_PACKAGE_JPEG=y
+# BR2_PACKAGE_LIBJPEG is not set
+BR2_PACKAGE_JPEG_TURBO=y
+# BR2_PACKAGE_JPEG_TURBO_TOOLS is not set
+BR2_PACKAGE_HAS_JPEG=y
+BR2_PACKAGE_PROVIDES_JPEG="jpeg-turbo"
 # BR2_PACKAGE_KMSXX is not set
 # BR2_PACKAGE_LCMS2 is not set
 # BR2_PACKAGE_LENSFUN is not set
@@ -1926,15 +1949,15 @@ BR2_PACKAGE_LIBDRM_HAS_ATOMIC=y
 #
 # BR2_PACKAGE_LIBMEDIAART is not set
 # BR2_PACKAGE_LIBMNG is not set
-# BR2_PACKAGE_LIBPNG is not set
+BR2_PACKAGE_LIBPNG=y
 # BR2_PACKAGE_LIBQRENCODE is not set
 # BR2_PACKAGE_LIBRAW is not set
 
 #
 # libsoil needs an OpenGL backend and a toolchain w/ dynamic library
 #
-# BR2_PACKAGE_LIBSVG is not set
-# BR2_PACKAGE_LIBSVG_CAIRO is not set
+BR2_PACKAGE_LIBSVG=y
+BR2_PACKAGE_LIBSVG_CAIRO=y
 # BR2_PACKAGE_LIBSVGTINY is not set
 # BR2_PACKAGE_LIBVA is not set
 # BR2_PACKAGE_LIBVDPAU is not set
@@ -2033,7 +2056,7 @@ BR2_PACKAGE_NE10_ARCH_SUPPORTS=y
 # BR2_PACKAGE_NEARDAL is not set
 # BR2_PACKAGE_OWFS is not set
 # BR2_PACKAGE_PCSC_LITE is not set
-# BR2_PACKAGE_TSLIB is not set
+BR2_PACKAGE_TSLIB=y
 # BR2_PACKAGE_UHD is not set
 # BR2_PACKAGE_URG is not set
 
