add simple qt5 application package

--- a/orangepi-3/package/Config.in
+++ b/orangepi-3/package/Config.in
@@ -308,6 +308,8 @@ comment "Graphic applications"
 	source "package/rrdtool/Config.in"
 	source "package/stellarium/Config.in"
 	source "package/tesseract-ocr/Config.in"
+	source "package/qt5_test_app/Config.in"
+	
 
 comment "Graphic libraries"
 	source "package/cegui/Config.in"
