--- a/orangepi_3_defconfig
+++ b/orangepi_3_defconfig
@@ -915,12 +915,17 @@ BR2_PACKAGE_LIBERATION_SERIF=y
 BR2_PACKAGE_NETSURF_ARCH_SUPPORTS=y
 # BR2_PACKAGE_NETSURF is not set
 # BR2_PACKAGE_PNGQUANT is not set
+
+#
+# qt5cinex needs an Open(E)GL-capable backend
+#
 # BR2_PACKAGE_RRDTOOL is not set
 
 #
 # stellarium needs Qt5 and an OpenGL provider
 #
 # BR2_PACKAGE_TESSERACT_OCR is not set
+BR2_PACKAGE_QT5_TEST_APP=y
 
 #
 # Graphic libraries
@@ -988,7 +993,112 @@ BR2_PACKAGE_SDL2_TTF=y
 # Other GUIs
 #
 BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
-# BR2_PACKAGE_QT5 is not set
+BR2_PACKAGE_QT5=y
+
+#
+# qt53d module needs an OpenGL-capable backend
+#
+BR2_PACKAGE_QT5BASE=y
+BR2_PACKAGE_QT5BASE_CUSTOM_CONF_OPTS=""
+BR2_PACKAGE_QT5BASE_CONFIG_FILE=""
+# BR2_PACKAGE_QT5BASE_EXAMPLES is not set
+BR2_PACKAGE_QT5BASE_NETWORK=y
+# BR2_PACKAGE_QT5BASE_CONCURRENT is not set
+BR2_PACKAGE_QT5BASE_SQL=y
+# BR2_PACKAGE_QT5BASE_MYSQL is not set
+# BR2_PACKAGE_QT5BASE_PSQL is not set
+BR2_PACKAGE_QT5BASE_SQLITE_NONE=y
+# BR2_PACKAGE_QT5BASE_SQLITE_QT is not set
+# BR2_PACKAGE_QT5BASE_SQLITE_SYSTEM is not set
+BR2_PACKAGE_QT5BASE_TEST=y
+BR2_PACKAGE_QT5BASE_XML=y
+BR2_PACKAGE_QT5BASE_GUI=y
+BR2_PACKAGE_QT5BASE_WIDGETS=y
+
+#
+# OpenGL support needs an OpenGL-capable backend
+#
+BR2_PACKAGE_QT5BASE_LINUXFB=y
+# BR2_PACKAGE_QT5BASE_DIRECTFB is not set
+BR2_PACKAGE_QT5BASE_XCB=y
+
+#
+# eglfs backend available if OpenGL and EGL are enabled
+#
+BR2_PACKAGE_QT5BASE_DEFAULT_QPA=""
+BR2_PACKAGE_QT5BASE_PRINTSUPPORT=y
+# BR2_PACKAGE_QT5BASE_FONTCONFIG is not set
+# BR2_PACKAGE_QT5BASE_HARFBUZZ is not set
+# BR2_PACKAGE_QT5BASE_GIF is not set
+# BR2_PACKAGE_QT5BASE_JPEG is not set
+# BR2_PACKAGE_QT5BASE_PNG is not set
+# BR2_PACKAGE_QT5BASE_SYSLOG is not set
+# BR2_PACKAGE_QT5BASE_DBUS is not set
+# BR2_PACKAGE_QT5BASE_ICU is not set
+# BR2_PACKAGE_QT5BASE_TSLIB is not set
+# BR2_PACKAGE_QT5CHARTS is not set
+# BR2_PACKAGE_QT5COAP is not set
+
+#
+# qt5connectivity needs neard and/or bluez5_utils
+#
+# BR2_PACKAGE_QT5DECLARATIVE is not set
+# BR2_PACKAGE_QT5ENGINIO is not set
+
+#
+# qt5graphicaleffects needs an OpenGL-capable backend
+#
+# BR2_PACKAGE_QT5IMAGEFORMATS is not set
+# BR2_PACKAGE_QT5KNX is not set
+# BR2_PACKAGE_QT5LOCATION is not set
+# BR2_PACKAGE_QT5LOTTIE is not set
+# BR2_PACKAGE_QT5MQTT is not set
+# BR2_PACKAGE_QT5MULTIMEDIA is not set
+# BR2_PACKAGE_QT5QUICKCONTROLS is not set
+# BR2_PACKAGE_QT5QUICKCONTROLS2 is not set
+# BR2_PACKAGE_QT5QUICKTIMELINE is not set
+# BR2_PACKAGE_QT5REMOTEOBJECTS is not set
+# BR2_PACKAGE_QT5SCRIPT is not set
+# BR2_PACKAGE_QT5SCXML is not set
+# BR2_PACKAGE_QT5SENSORS is not set
+# BR2_PACKAGE_QT5SERIALBUS is not set
+# BR2_PACKAGE_QT5SERIALPORT is not set
+# BR2_PACKAGE_QT5SVG is not set
+# BR2_PACKAGE_QT5TOOLS is not set
+# BR2_PACKAGE_QT5VIRTUALKEYBOARD is not set
+
+#
+# qt5wayland needs an OpenGL-capable backend
+#
+# BR2_PACKAGE_QT5WEBCHANNEL is not set
+# BR2_PACKAGE_QT5WEBKIT is not set
+BR2_PACKAGE_QT5WEBENGINE_ARCH_SUPPORTS=y
+
+#
+# qt5webengine needs udev /dev management and a glibc toolchain w/ gcc >= 4.9, host gcc >= 4.9, threads, wchar
+#
+
+#
+# qt5webengine needs an OpenGL and EGL-capable backend
+#
+# BR2_PACKAGE_QT5WEBSOCKETS is not set
+
+#
+# qt5webview needs qt5webengine module
+#
+# BR2_PACKAGE_QT5X11EXTRAS is not set
+# BR2_PACKAGE_QT5XMLPATTERNS is not set
+
+#
+# QT libraries and helper libraries
+#
+# BR2_PACKAGE_CUTELYST is not set
+# BR2_PACKAGE_GRANTLEE is not set
+# BR2_PACKAGE_KF5 is not set
+# BR2_PACKAGE_QEXTSERIALPORT is not set
+# BR2_PACKAGE_QJSON is not set
+# BR2_PACKAGE_QUAZIP is not set
+# BR2_PACKAGE_QWT is not set
 
 #
 # tekui needs a Lua interpreter and a toolchain w/ threads, dynamic library
@@ -1012,13 +1122,13 @@ BR2_PACKAGE_XSERVER_XORG_SERVER_MODULAR=y
 # X11R7 Libraries
 #
 BR2_PACKAGE_LIBXCB=y
-# BR2_PACKAGE_XCB_UTIL is not set
+BR2_PACKAGE_XCB_UTIL=y
 # BR2_PACKAGE_XCB_UTIL_CURSOR is not set
-# BR2_PACKAGE_XCB_UTIL_IMAGE is not set
-# BR2_PACKAGE_XCB_UTIL_KEYSYMS is not set
-# BR2_PACKAGE_XCB_UTIL_RENDERUTIL is not set
-# BR2_PACKAGE_XCB_UTIL_WM is not set
-# BR2_PACKAGE_XLIB_LIBFS is not set
+BR2_PACKAGE_XCB_UTIL_IMAGE=y
+BR2_PACKAGE_XCB_UTIL_KEYSYMS=y
+BR2_PACKAGE_XCB_UTIL_RENDERUTIL=y
+BR2_PACKAGE_XCB_UTIL_WM=y
+BR2_PACKAGE_XLIB_LIBFS=y
 BR2_PACKAGE_XLIB_LIBICE=y
 BR2_PACKAGE_XLIB_LIBSM=y
 BR2_PACKAGE_XLIB_LIBX11=y
@@ -1283,6 +1393,7 @@ BR2_PACKAGE_XDATA_XBITMAPS=y
 #
 # BR2_PACKAGE_NODM is not set
 # BR2_PACKAGE_PCMANFM is not set
+# BR2_PACKAGE_QT_WEBKIT_KIOSK is not set
 # BR2_PACKAGE_RDESKTOP is not set
 # BR2_PACKAGE_SYNERGY is not set
 
@@ -1310,20 +1421,7 @@ BR2_PACKAGE_XKEYBOARD_CONFIG=y
 # X window managers
 #
 # BR2_PACKAGE_FLUXBOX is not set
-BR2_PACKAGE_MATCHBOX=y
-BR2_PACKAGE_MATCHBOX_SM=y
-
-#
-# matchbox utilities
-#
-BR2_PACKAGE_MATCHBOX_COMMON=y
-# BR2_PACKAGE_MATCHBOX_COMMON_PDA is not set
-BR2_PACKAGE_MATCHBOX_DESKTOP=y
-BR2_PACKAGE_MATCHBOX_FAKEKEY=y
-BR2_PACKAGE_MATCHBOX_KEYBOARD=y
-BR2_PACKAGE_MATCHBOX_LIB=y
-BR2_PACKAGE_MATCHBOX_PANEL=y
-BR2_PACKAGE_MATCHBOX_STARTUP_MONITOR=y
+# BR2_PACKAGE_MATCHBOX is not set
 # BR2_PACKAGE_OPENBOX is not set
 BR2_PACKAGE_RATPOISON=y
 
@@ -1568,6 +1666,7 @@ BR2_PACKAGE_FLASHROM_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PIGPIO is not set
 # BR2_PACKAGE_POWERTOP is not set
 # BR2_PACKAGE_PPS_TOOLS is not set
+# BR2_PACKAGE_PULSEVIEW is not set
 # BR2_PACKAGE_RASPI_GPIO is not set
 # BR2_PACKAGE_READ_EDID is not set
 # BR2_PACKAGE_RNG_TOOLS is not set
@@ -2047,7 +2146,7 @@ BR2_PACKAGE_LIBPCIACCESS=y
 # BR2_PACKAGE_LIBUSB is not set
 # BR2_PACKAGE_LIBUSBGX is not set
 # BR2_PACKAGE_LIBV4L is not set
-# BR2_PACKAGE_LIBXKBCOMMON is not set
+BR2_PACKAGE_LIBXKBCOMMON=y
 BR2_PACKAGE_MRAA_ARCH_SUPPORTS=y
 # BR2_PACKAGE_MRAA is not set
 BR2_PACKAGE_MTDEV=y
@@ -2128,10 +2227,7 @@ BR2_PACKAGE_LIBXML2=y
 # BR2_PACKAGE_LOG4CPLUS is not set
 # BR2_PACKAGE_LOG4CPP is not set
 # BR2_PACKAGE_LOG4CXX is not set
-
-#
-# log4qt needs qt5
-#
+# BR2_PACKAGE_LOG4QT is not set
 # BR2_PACKAGE_OPENTRACING_CPP is not set
 # BR2_PACKAGE_SPDLOG is not set
 # BR2_PACKAGE_ZLOG is not set
@@ -2512,7 +2608,11 @@ BR2_PACKAGE_PCRE=y
 # BR2_PACKAGE_PCRE_32 is not set
 BR2_PACKAGE_PCRE_UTF=y
 BR2_PACKAGE_PCRE_UCP=y
-# BR2_PACKAGE_PCRE2 is not set
+BR2_PACKAGE_PCRE2=y
+BR2_PACKAGE_PCRE2_16=y
+# BR2_PACKAGE_PCRE2_32 is not set
+BR2_PACKAGE_PCRE2_JIT_ARCH_SUPPORTS=y
+# BR2_PACKAGE_PCRE2_JIT is not set
 # BR2_PACKAGE_POPT is not set
 # BR2_PACKAGE_RE2 is not set
 # BR2_PACKAGE_READLINE is not set
@@ -2552,10 +2652,7 @@ BR2_PACKAGE_BITCOIN_ARCH_SUPPORTS=y
 #
 # gqrx needs a toolchain w/ C++, threads, wchar, dynamic library
 #
-
-#
-# gqrx needs qt5
-#
+# BR2_PACKAGE_GQRX is not set
 # BR2_PACKAGE_GSETTINGS_DESKTOP_SCHEMAS is not set
 # BR2_PACKAGE_HAVEGED is not set
 # BR2_PACKAGE_LINUX_SYSCALL_SUPPORT is not set
