Copy qt5_test_app package files to buildroot dirs

--- a/orangepi_3_defconfig
+++ b/orangepi_3_defconfig
@@ -744,6 +744,7 @@ BR2_PACKAGE_VALGRIND_ARCH_SUPPORTS=y
 # BR2_PACKAGE_BINUTILS is not set
 # BR2_PACKAGE_BITWISE is not set
 # BR2_PACKAGE_BSDIFF is not set
+# BR2_PACKAGE_BUSTLE is not set
 # BR2_PACKAGE_CHECK is not set
 BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CMAKE_CTEST is not set
@@ -1027,13 +1028,13 @@ BR2_PACKAGE_QT5BASE_XCB=y
 #
 BR2_PACKAGE_QT5BASE_DEFAULT_QPA=""
 BR2_PACKAGE_QT5BASE_PRINTSUPPORT=y
-# BR2_PACKAGE_QT5BASE_FONTCONFIG is not set
+BR2_PACKAGE_QT5BASE_FONTCONFIG=y
 # BR2_PACKAGE_QT5BASE_HARFBUZZ is not set
 # BR2_PACKAGE_QT5BASE_GIF is not set
 # BR2_PACKAGE_QT5BASE_JPEG is not set
 # BR2_PACKAGE_QT5BASE_PNG is not set
 # BR2_PACKAGE_QT5BASE_SYSLOG is not set
-# BR2_PACKAGE_QT5BASE_DBUS is not set
+BR2_PACKAGE_QT5BASE_DBUS=y
 # BR2_PACKAGE_QT5BASE_ICU is not set
 # BR2_PACKAGE_QT5BASE_TSLIB is not set
 # BR2_PACKAGE_QT5CHARTS is not set
@@ -1593,7 +1594,10 @@ BR2_PACKAGE_CPUBURN_ARM_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CWIID is not set
 # BR2_PACKAGE_DAHDI_LINUX is not set
 # BR2_PACKAGE_DAHDI_TOOLS is not set
-# BR2_PACKAGE_DBUS is not set
+BR2_PACKAGE_DBUS=y
+# BR2_PACKAGE_DBUS_CPP is not set
+# BR2_PACKAGE_DBUS_GLIB is not set
+# BR2_PACKAGE_DBUS_TRIGGERD is not set
 # BR2_PACKAGE_DFU_UTIL is not set
 # BR2_PACKAGE_DMIDECODE is not set
 # BR2_PACKAGE_DMRAID is not set
