--- a/orangepi_3_defconfig
+++ b/orangepi_3_defconfig
@@ -584,10 +584,9 @@ BR2_PACKAGE_KODI_ARCH_SUPPORTS=y
 #
 # kodi needs python3 w/ .py modules, a uClibc or glibc toolchain w/ C++, threads, wchar, dynamic library, gcc >= 4.9
 #
-
-#
-# kodi needs an OpenGL EGL backend with OpenGL or GLES support
-#
+BR2_PACKAGE_KODI_PLATFORM_SUPPORTS=y
+BR2_PACKAGE_KODI_PLATFORM_SUPPORTS_GBM=y
+BR2_PACKAGE_KODI_PLATFORM_SUPPORTS_X11=y
 # BR2_PACKAGE_LAME is not set
 # BR2_PACKAGE_MADPLAY is not set
 # BR2_PACKAGE_MIMIC is not set
@@ -862,27 +861,13 @@ BR2_PACKAGE_LIBERATION_SERIF=y
 # BR2_PACKAGE_GNUCHESS is not set
 # BR2_PACKAGE_LBREAKOUT2 is not set
 # BR2_PACKAGE_LTRIS is not set
-
-#
-# lugaru needs X11 and a toolchain w/ C++, OpenGL backend, gcc >= 4.9, NPTL, dynamic library
-#
-
-#
-# minetest needs X11 and an OpenGL provider
-#
+# BR2_PACKAGE_LUGARU is not set
 # BR2_PACKAGE_OPENTYRIAN is not set
 # BR2_PACKAGE_PRBOOM is not set
 # BR2_PACKAGE_RUBIX is not set
 # BR2_PACKAGE_SL is not set
-
-#
-# solarus needs OpenGL and a toolchain w/ C++, gcc >= 4.9, NPTL, dynamic library, and luajit or lua 5.1
-#
 # BR2_PACKAGE_STELLA is not set
-
-#
-# supertux needs OpenGL and a toolchain w/ C++, gcc >= 6, NPTL, dynamic library, wchar
-#
+# BR2_PACKAGE_SUPERTUX is not set
 # BR2_PACKAGE_XORCURSES is not set
 
 #
@@ -892,39 +877,31 @@ BR2_PACKAGE_LIBERATION_SERIF=y
 #
 # Graphic applications
 #
-
-#
-# cage needs udev, EGL w/ Wayland backend and OpenGL ES support
-#
+# BR2_PACKAGE_CAGE is not set
 
 #
 # cog needs wpewebkit and a toolchain w/ threads
 #
 # BR2_PACKAGE_FSWEBCAM is not set
 # BR2_PACKAGE_GHOSTSCRIPT is not set
-
-#
-# glmark2 needs an OpenGL or an openGL ES and EGL backend
-#
-
-#
-# glslsandbox-player needs a toolchain w/ threads and an openGL ES and EGL driver
-#
+BR2_PACKAGE_GLMARK2_FLAVOR_ANY=y
+BR2_PACKAGE_GLMARK2_FLAVOR_DRM_GLESV2=y
+BR2_PACKAGE_GLMARK2_FLAVOR_DRM_GL=y
+BR2_PACKAGE_GLMARK2_FLAVOR_X11_GLESV2=y
+BR2_PACKAGE_GLMARK2_FLAVOR_X11_GL=y
+# BR2_PACKAGE_GLMARK2 is not set
+# BR2_PACKAGE_GLSLSANDBOX_PLAYER is not set
 # BR2_PACKAGE_GNUPLOT is not set
 # BR2_PACKAGE_JHEAD is not set
+# BR2_PACKAGE_KMSCUBE is not set
 # BR2_PACKAGE_LIBVA_UTILS is not set
+# BR2_PACKAGE_MESA3D_DEMOS is not set
 BR2_PACKAGE_NETSURF_ARCH_SUPPORTS=y
 # BR2_PACKAGE_NETSURF is not set
 # BR2_PACKAGE_PNGQUANT is not set
-
-#
-# qt5cinex needs an Open(E)GL-capable backend
-#
+# BR2_PACKAGE_QT5CINEX is not set
 # BR2_PACKAGE_RRDTOOL is not set
-
-#
-# stellarium needs Qt5 and an OpenGL provider
-#
+# BR2_PACKAGE_STELLARIUM is not set
 # BR2_PACKAGE_TESSERACT_OCR is not set
 BR2_PACKAGE_QT5_TEST_APP=y
 
@@ -963,26 +940,66 @@ BR2_PACKAGE_DIRECTFB_SVG=y
 # BR2_PACKAGE_IMAGEMAGICK is not set
 # BR2_PACKAGE_LINUX_FUSION is not set
 # BR2_PACKAGE_LITE is not set
-# BR2_PACKAGE_MESA3D is not set
-# BR2_PACKAGE_OCRAD is not set
+BR2_PACKAGE_MESA3D=y
+# BR2_PACKAGE_MESA3D_LLVM is not set
+BR2_PACKAGE_MESA3D_GALLIUM_DRIVER=y
+BR2_PACKAGE_MESA3D_DRIVER=y
+BR2_PACKAGE_MESA3D_GALLIUM_KMSRO=y
+BR2_PACKAGE_MESA3D_NEEDS_X11=y
 
 #
-# ogre needs X11 and an OpenGL provider
+# Gallium drivers
 #
+# BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_ETNAVIV is not set
+# BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_FREEDRENO is not set
+# BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_KMSRO is not set
+BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_LIMA=y
+# BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_NOUVEAU is not set
+BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_PANFROST=y
+# BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_SWRAST is not set
+# BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_TEGRA is not set
+# BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_V3D is not set
+# BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_VC4 is not set
+# BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_VIRGL is not set
+
+#
+# Gallium VDPAU state tracker needs X.org and gallium drivers r300, r600, radeonsi or nouveau
+#
+
+#
+# DRI drivers
+#
+# BR2_PACKAGE_MESA3D_DRI_DRIVER_NOUVEAU is not set
+
+#
+# Vulkan drivers
+#
+
+#
+# Off-screen Rendering
+#
+# BR2_PACKAGE_MESA3D_OSMESA_GALLIUM is not set
+
+#
+# OpenGL API Support
+#
+BR2_PACKAGE_MESA3D_GBM=y
+BR2_PACKAGE_MESA3D_OPENGL_GLX=y
+BR2_PACKAGE_MESA3D_OPENGL_EGL=y
+BR2_PACKAGE_MESA3D_OPENGL_ES=y
+BR2_PACKAGE_PROVIDES_LIBGL="mesa3d"
+BR2_PACKAGE_PROVIDES_LIBEGL="mesa3d"
+BR2_PACKAGE_PROVIDES_LIBGLES="mesa3d"
+# BR2_PACKAGE_OCRAD is not set
+# BR2_PACKAGE_OGRE is not set
 # BR2_PACKAGE_PSPLASH is not set
 # BR2_PACKAGE_SDL is not set
 BR2_PACKAGE_SDL2=y
 BR2_PACKAGE_SDL2_DIRECTFB=y
 BR2_PACKAGE_SDL2_X11=y
 BR2_PACKAGE_SDL2_KMSDRM=y
-
-#
-# OpenGL support needs X11 and an OpenGL provider
-#
-
-#
-# OpenGL ES support needs an OpenGL ES provider
-#
+# BR2_PACKAGE_SDL2_OPENGL is not set
+# BR2_PACKAGE_SDL2_OPENGLES is not set
 # BR2_PACKAGE_SDL2_GFX is not set
 BR2_PACKAGE_SDL2_IMAGE=y
 BR2_PACKAGE_SDL2_MIXER=y
@@ -993,18 +1010,16 @@ BR2_PACKAGE_SDL2_TTF=y
 #
 # Other GUIs
 #
+BR2_PACKAGE_QT5_GL_AVAILABLE=y
 BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 BR2_PACKAGE_QT5=y
-
-#
-# qt53d module needs an OpenGL-capable backend
-#
+# BR2_PACKAGE_QT53D is not set
 BR2_PACKAGE_QT5BASE=y
 BR2_PACKAGE_QT5BASE_CUSTOM_CONF_OPTS=""
 BR2_PACKAGE_QT5BASE_CONFIG_FILE=""
 # BR2_PACKAGE_QT5BASE_EXAMPLES is not set
 BR2_PACKAGE_QT5BASE_NETWORK=y
-# BR2_PACKAGE_QT5BASE_CONCURRENT is not set
+BR2_PACKAGE_QT5BASE_CONCURRENT=y
 BR2_PACKAGE_QT5BASE_SQL=y
 # BR2_PACKAGE_QT5BASE_MYSQL is not set
 # BR2_PACKAGE_QT5BASE_PSQL is not set
@@ -1015,17 +1030,14 @@ BR2_PACKAGE_QT5BASE_TEST=y
 BR2_PACKAGE_QT5BASE_XML=y
 BR2_PACKAGE_QT5BASE_GUI=y
 BR2_PACKAGE_QT5BASE_WIDGETS=y
-
-#
-# OpenGL support needs an OpenGL-capable backend
-#
+BR2_PACKAGE_QT5BASE_OPENGL=y
+BR2_PACKAGE_QT5BASE_OPENGL_DESKTOP=y
+# BR2_PACKAGE_QT5BASE_OPENGL_ES2 is not set
+# BR2_PACKAGE_QT5BASE_OPENGL_LIB is not set
 BR2_PACKAGE_QT5BASE_LINUXFB=y
 # BR2_PACKAGE_QT5BASE_DIRECTFB is not set
 BR2_PACKAGE_QT5BASE_XCB=y
-
-#
-# eglfs backend available if OpenGL and EGL are enabled
-#
+BR2_PACKAGE_QT5BASE_EGLFS=y
 BR2_PACKAGE_QT5BASE_DEFAULT_QPA=""
 BR2_PACKAGE_QT5BASE_PRINTSUPPORT=y
 BR2_PACKAGE_QT5BASE_FONTCONFIG=y
@@ -1045,10 +1057,7 @@ BR2_PACKAGE_QT5BASE_DBUS=y
 #
 # BR2_PACKAGE_QT5DECLARATIVE is not set
 # BR2_PACKAGE_QT5ENGINIO is not set
-
-#
-# qt5graphicaleffects needs an OpenGL-capable backend
-#
+# BR2_PACKAGE_QT5GRAPHICALEFFECTS is not set
 # BR2_PACKAGE_QT5IMAGEFORMATS is not set
 # BR2_PACKAGE_QT5KNX is not set
 # BR2_PACKAGE_QT5LOCATION is not set
@@ -1067,20 +1076,13 @@ BR2_PACKAGE_QT5BASE_DBUS=y
 # BR2_PACKAGE_QT5SVG is not set
 # BR2_PACKAGE_QT5TOOLS is not set
 # BR2_PACKAGE_QT5VIRTUALKEYBOARD is not set
-
-#
-# qt5wayland needs an OpenGL-capable backend
-#
+# BR2_PACKAGE_QT5WAYLAND is not set
 # BR2_PACKAGE_QT5WEBCHANNEL is not set
 # BR2_PACKAGE_QT5WEBKIT is not set
 BR2_PACKAGE_QT5WEBENGINE_ARCH_SUPPORTS=y
 
 #
 # qt5webengine needs udev /dev management and a glibc toolchain w/ gcc >= 4.9, host gcc >= 4.9, threads, wchar
-#
-
-#
-# qt5webengine needs an OpenGL and EGL-capable backend
 #
 # BR2_PACKAGE_QT5WEBSOCKETS is not set
 
@@ -1099,7 +1101,10 @@ BR2_PACKAGE_QT5WEBENGINE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_QEXTSERIALPORT is not set
 # BR2_PACKAGE_QJSON is not set
 # BR2_PACKAGE_QUAZIP is not set
-# BR2_PACKAGE_QWT is not set
+BR2_PACKAGE_QWT=y
+# BR2_PACKAGE_QWT_SVG is not set
+# BR2_PACKAGE_QWT_MATHML is not set
+# BR2_PACKAGE_QWT_OPENGL is not set
 
 #
 # tekui needs a Lua interpreter and a toolchain w/ threads, dynamic library
@@ -1205,10 +1210,7 @@ BR2_PACKAGE_XAPP_XAUTH=y
 # BR2_PACKAGE_XAPP_XDITVIEW is not set
 # BR2_PACKAGE_XAPP_XDM is not set
 # BR2_PACKAGE_XAPP_XDPYINFO is not set
-
-#
-# xdriinfo needs an OpenGL backend
-#
+# BR2_PACKAGE_XAPP_XDRIINFO is not set
 # BR2_PACKAGE_XAPP_XEDIT is not set
 # BR2_PACKAGE_XAPP_XEV is not set
 # BR2_PACKAGE_XAPP_XEYES is not set
@@ -1277,47 +1279,25 @@ BR2_PACKAGE_XDRIVER_XF86_INPUT_MOUSE=y
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_DUMMY is not set
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBDEV=y
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBTURBO is not set
-
-#
-# xf86-video-glint needs mesa3d
-#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_GLINT is not set
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_I128 is not set
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_MACH64 is not set
-
-#
-# xf86-video-mga needs mesa3d
-#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_MGA is not set
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_NEOMAGIC is not set
-
-#
-# xf86-video-nouveau needs mesa3d
-#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_NOUVEAU is not set
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_NV is not set
 
 #
 # xf86-video-openchrome needs a DRI driver from mesa3d
 #
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_R128 is not set
-
-#
-# xf86-video-savage needs mesa3d
-#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_SAVAGE is not set
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_SILICONMOTION is not set
-
-#
-# xf86-video-sis needs mesa3d
-#
-
-#
-# xf86-video-tdfx needs mesa3d
-#
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_SIS is not set
+# BR2_PACKAGE_XDRIVER_XF86_VIDEO_TDFX is not set
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_TGA is not set
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_TRIDENT is not set
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_VESA=y
-
-#
-# xf86-video-vmware needs mesa3d
-#
 # BR2_PACKAGE_XDRIVER_XF86_VIDEO_VOODOO is not set
 
 #
@@ -1397,10 +1377,7 @@ BR2_PACKAGE_XDATA_XBITMAPS=y
 # BR2_PACKAGE_QT_WEBKIT_KIOSK is not set
 # BR2_PACKAGE_RDESKTOP is not set
 # BR2_PACKAGE_SYNERGY is not set
-
-#
-# vte needs an OpenGL or an OpenGL-EGL/wayland backend
-#
+# BR2_PACKAGE_VTE is not set
 # BR2_PACKAGE_WMCTRL is not set
 # BR2_PACKAGE_X11VNC is not set
 # BR2_PACKAGE_XDOTOOL is not set
@@ -1963,10 +1940,7 @@ BR2_PACKAGE_CAIRO_SVG=y
 # BR2_PACKAGE_CAIRO_TEE is not set
 # BR2_PACKAGE_CAIRO_XML is not set
 # BR2_PACKAGE_CAIROMM is not set
-
-#
-# chipmunk needs an OpenGL backend
-#
+# BR2_PACKAGE_CHIPMUNK is not set
 # BR2_PACKAGE_EXEMPI is not set
 # BR2_PACKAGE_EXIV2 is not set
 # BR2_PACKAGE_FLTK is not set
@@ -1988,10 +1962,7 @@ BR2_PACKAGE_FREETYPE=y
 BR2_PACKAGE_HARFBUZZ=y
 # BR2_PACKAGE_IJS is not set
 # BR2_PACKAGE_IMLIB2 is not set
-
-#
-# irrlicht needs X11 and an OpenGL provider
-#
+# BR2_PACKAGE_IRRLICHT is not set
 # BR2_PACKAGE_JASPER is not set
 # BR2_PACKAGE_JBIG2DEC is not set
 BR2_PACKAGE_JPEG_SIMD_SUPPORT=y
@@ -2011,66 +1982,47 @@ BR2_PACKAGE_PROVIDES_JPEG="jpeg-turbo"
 # BR2_PACKAGE_LIBDRI2 is not set
 BR2_PACKAGE_LIBDRM=y
 BR2_PACKAGE_LIBDRM_HAS_ATOMIC=y
+BR2_PACKAGE_LIBDRM_ENABLE_ATOMIC=y
 # BR2_PACKAGE_LIBDRM_RADEON is not set
 # BR2_PACKAGE_LIBDRM_AMDGPU is not set
-# BR2_PACKAGE_LIBDRM_NOUVEAU is not set
+BR2_PACKAGE_LIBDRM_NOUVEAU=y
 # BR2_PACKAGE_LIBDRM_ETNAVIV is not set
 # BR2_PACKAGE_LIBDRM_FREEDRENO is not set
 # BR2_PACKAGE_LIBDRM_VC4 is not set
 # BR2_PACKAGE_LIBDRM_INSTALL_TESTS is not set
-
-#
-# libepoxy needs an OpenGL and/or OpenGL EGL backend
-#
+# BR2_PACKAGE_LIBEPOXY is not set
 # BR2_PACKAGE_LIBEXIF is not set
 # BR2_PACKAGE_LIBFM is not set
 # BR2_PACKAGE_LIBFM_EXTRA is not set
-
-#
-# libfreeglut depends on X.org and needs an OpenGL backend
-#
+# BR2_PACKAGE_LIBFREEGLUT is not set
 # BR2_PACKAGE_LIBFREEIMAGE is not set
 # BR2_PACKAGE_LIBGDIPLUS is not set
 # BR2_PACKAGE_LIBGEOTIFF is not set
-
-#
-# libglew depends on X.org and needs an OpenGL backend
-#
-
-#
-# libglfw depends on X.org and needs an OpenGL backend
-#
-
-#
-# libglu needs an OpenGL backend
-#
+# BR2_PACKAGE_LIBGLEW is not set
+# BR2_PACKAGE_LIBGLFW is not set
+# BR2_PACKAGE_LIBGLU is not set
 # BR2_PACKAGE_LIBGTA is not set
 # BR2_PACKAGE_LIBGTK2 is not set
-
-#
-# libgtk3 needs an OpenGL or an OpenGL-EGL/wayland backend
-#
+# BR2_PACKAGE_LIBGTK3 is not set
 # BR2_PACKAGE_LIBMEDIAART is not set
 # BR2_PACKAGE_LIBMNG is not set
 BR2_PACKAGE_LIBPNG=y
 # BR2_PACKAGE_LIBQRENCODE is not set
 # BR2_PACKAGE_LIBRAW is not set
-
-#
-# libsoil needs an OpenGL backend and a toolchain w/ dynamic library
-#
+# BR2_PACKAGE_LIBSOIL is not set
 BR2_PACKAGE_LIBSVG=y
 BR2_PACKAGE_LIBSVG_CAIRO=y
 # BR2_PACKAGE_LIBSVGTINY is not set
 # BR2_PACKAGE_LIBVA is not set
 # BR2_PACKAGE_LIBVDPAU is not set
 # BR2_PACKAGE_LIBVIPS is not set
-
-#
-# libwpe needs a toolchain w/ C++, dynamic library and an OpenEGL-capable backend
-#
+# BR2_PACKAGE_LIBWPE is not set
 # BR2_PACKAGE_MENU_CACHE is not set
 # BR2_PACKAGE_OPENCV3 is not set
+BR2_PACKAGE_HAS_LIBGL=y
+BR2_PACKAGE_HAS_LIBEGL=y
+BR2_PACKAGE_HAS_LIBEGL_WAYLAND=y
+BR2_PACKAGE_HAS_LIBGLES=y
 # BR2_PACKAGE_OPENJPEG is not set
 BR2_PACKAGE_PANGO=y
 # BR2_PACKAGE_PANGOMM is not set
@@ -2079,6 +2031,10 @@ BR2_PACKAGE_PIXMAN=y
 # BR2_PACKAGE_POPPLER is not set
 # BR2_PACKAGE_TIFF is not set
 # BR2_PACKAGE_UNCLUTTER_XFIXES is not set
+BR2_PACKAGE_WAFFLE_SUPPORTS_GLX=y
+BR2_PACKAGE_WAFFLE_SUPPORTS_X11_EGL=y
+BR2_PACKAGE_WAFFLE_SUPPORTS_GBM=y
+# BR2_PACKAGE_WAFFLE is not set
 # BR2_PACKAGE_WAYLAND is not set
 BR2_PACKAGE_WEBKITGTK_ARCH_SUPPORTS=y
 
@@ -2086,20 +2042,11 @@ BR2_PACKAGE_WEBKITGTK_ARCH_SUPPORTS=y
 # webkitgtk needs libgtk3 and a glibc toolchain w/ C++, gcc >= 7, host gcc >= 4.9
 #
 # BR2_PACKAGE_WEBP is not set
-
-#
-# wlroots needs udev, EGL w/ Wayland backend and OpenGL ES support
-#
+# BR2_PACKAGE_WLROOTS is not set
 # BR2_PACKAGE_WOFF2 is not set
-
-#
-# wpebackend-fdo needs a toolchain w/ C++, wchar, threads, dynamic library and an OpenEGL-capable Wayland backend
-#
+# BR2_PACKAGE_WPEBACKEND_FDO is not set
 BR2_PACKAGE_WPEWEBKIT_ARCH_SUPPORTS=y
-
-#
-# wpewebkit needs an OpenGL ES w/ EGL-capable Wayland backend
-#
+# BR2_PACKAGE_WPEWEBKIT is not set
 # BR2_PACKAGE_ZBAR is not set
 # BR2_PACKAGE_ZXING_CPP is not set
 
@@ -2129,7 +2076,7 @@ BR2_PACKAGE_GNU_EFI_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBGUDEV is not set
 # BR2_PACKAGE_LIBHID is not set
 # BR2_PACKAGE_LIBIIO is not set
-# BR2_PACKAGE_LIBINPUT is not set
+BR2_PACKAGE_LIBINPUT=y
 # BR2_PACKAGE_LIBIQRF is not set
 # BR2_PACKAGE_LIBLLCP is not set
 # BR2_PACKAGE_LIBMBIM is not set
@@ -3456,7 +3403,7 @@ BR2_PACKAGE_HOST_KMOD=y
 # BR2_PACKAGE_HOST_LPC3250LOADER is not set
 # BR2_PACKAGE_HOST_LTTNG_BABELTRACE is not set
 # BR2_PACKAGE_HOST_MENDER_ARTIFACT is not set
-# BR2_PACKAGE_HOST_MESON_TOOLS is not set
+BR2_PACKAGE_HOST_MESON_TOOLS=y
 BR2_PACKAGE_HOST_MKPASSWD=y
 # BR2_PACKAGE_HOST_MTD is not set
 BR2_PACKAGE_HOST_MTOOLS=y
